--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,8 @@ name: Prepare for Deployment
 on:
   schedule:
     - cron: '0 0 * * 0'
-  workflow_dispatch
-  push
+  workflow_dispatch:
+  push:
   
 
 jobs:
