--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,12 +27,8 @@ jobs:
 
     - name: Run generate_site.py
       run: python generate_site.py
-
-    - name: Add index.html and textures.json to git
-      run: |
-          git add index.html
-          git add textures.json
-    - uses: stefanzweifel/git-auto-commit-action@v5
+    - name: push
+      uses: EndBug/add-and-commit@v9
       with:
-        commit_message: Generate site
-
+        default_author: github_actions
+        message: 'ci: generate site'
