--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,5 +30,7 @@ jobs:
     - name: push
       uses: EndBug/add-and-commit@v9
       with:
-        default_author: github_actions
+        default_author: github_actor
+        author_name: Actions Bot
+        author_email: mail@example.com
         message: 'ci: generate site'
