--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,10 +27,8 @@ jobs:
 
     - name: Run generate_site.py
       run: python generate_site.py
-    - name: push
-      uses: EndBug/add-and-commit@v9
+
+      
+    - uses: EndBug/add-and-commit@v9
       with:
-        default_author: github_actor
-        author_name: Actions Bot
-        author_email: mail@example.com
-        message: 'ci: generate site'
+        default_author: github_actions
