--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,10 @@ jobs:
     - name: Run generate_site.py
       run: python generate_site.py
 
-      
-    - uses: EndBug/add-and-commit@v9
-      with:
-        default_author: github_actions
+    - name: Push
+      run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "Site generated"
+          git push
