--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,7 @@
 name: Prepare for Deployment
 
 on:
-  schedule:
-    - cron: '0 0 * * 0'
-  workflow_dispatch:
-  push:
-  
+  workflow_dispatch  
 
 jobs:
   build-and-deploy:
